--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
          
          <div class="credit-box">
            <span>Made by</span>
-           <strong>Alex</strong>
+           <strong>Ankit</strong>
            <div style="margin-top:8px;font-size:10px;color:#666;">Version 1.0.3</div>
          </div>
        </div>
