--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -319,19 +319,23 @@
       </div>
     </div>
 
-    <!-- Login Required Modal (OAuth System Browser) -->
+    <!-- Login Failed Modal -->
     <div id="modal-login-failed" class="modal-overlay hidden">
       <div class="modal sm-modal">
         <div class="modal-header">
-          <h3>🔐 Login Required</h3>
+          <h3>❌ Login Failed</h3>
           <button id="close-login-failed-modal" class="close-btn">&times;</button>
         </div>
         <div class="modal-content">
           <p class="text-sm text-muted mb-3">
-            <strong>Google requires login in your system browser for security.</strong><br>
-            Embedded browser login is blocked to protect your account.
+            <strong></strong>Unable to sign in.</strong><br><br>
+            This is caused by Google blocking embedded browser login.<br>
+            It may take 2-3 tries to successfully sign in.<br><br>
+            <strong>What to try:</strong><br>
+            • Clear cache and try signing in again<br>
+            • Restart the app if still not working
           </p>
-          <button id="oauth-login-btn" class="primary-btn w-full mb-2">Login with Google</button>
+          <button id="oauth-login-btn" class="primary-btn w-full mb-2">Clear Cache & Retry Login</button>
           <button id="cancel-login-failed-btn" class="secondary-btn w-full">Cancel</button>
         </div>
       </div>
